// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders Windows caption controls in expanded and collapsed states > windows collapsed 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <div
          data-slot="sidebar.toggle.badge"
          style="display: contents;"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        >
          <div
            class="actionItem"
          >
            <button
              aria-label="Plans"
              class="railButton"
              title="Plans"
              type="button"
            >
              <span
                aria-hidden="true"
                class="actionIcon"
              >
                <svg
                  data-content="6aaf59e1"
                  fill="none"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </span>
            </button>
          </div>
          <div
            class="userItem"
          >
            <button
              aria-label="Profile"
              class="railUserButton"
              title="Profile"
              type="button"
            >
              U
            </button>
          </div>
        </div>
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders Windows caption controls in expanded and collapsed states > windows expanded 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <img
                alt=""
                aria-hidden="true"
                height="24"
                src="/brand.png"
                style="object-fit: contain; display: inline-block;"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="localBuildBrand"
              >
                <span
                  class="localBuildTitle"
                >
                  CopyMonster
                </span>
                <span
                  class="buildVersion"
                >
                  1.2.3-rc.4-abc1234-dirty
                </span>
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        >
          <div
            class="actionItem"
          >
            <button
              aria-label="Plans"
              class="wideButton"
              title="Plans"
              type="button"
            >
              <span
                aria-hidden="true"
                class="actionIcon"
              >
                <svg
                  data-content="6aaf59e1"
                  fill="none"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </span>
              <span
                class="actionLabel"
              >
                Plans
              </span>
            </button>
          </div>
          <div
            class="userItem"
          >
            <div
              class="wideUserContainer"
            >
              <div
                class="userInfo"
                role="button"
                tabindex="0"
                title="Profile"
              >
                <div
                  class="userAvatar"
                >
                  U
                </div>
                <span
                  class="userLabel"
                >
                  Profile
                </span>
              </div>
              <div
                class="userActions"
              >
                <button
                  class="logoutButton"
                  title="Log out"
                  type="button"
                >
                  Log out
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <span
          aria-hidden="true"
          class="railMark"
        >
          <div
            data-slot="sidebar.brand.mark"
            style="display: contents;"
          >
            <img
              alt=""
              aria-hidden="true"
              height="24"
              src="/brand.png"
              style="object-fit: contain; display: inline-block;"
              width="24"
            />
          </div>
        </span>
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
        <div
          data-slot="sidebar.toggle.badge"
          style="display: contents;"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        >
          <div
            class="actionItem"
          >
            <button
              aria-label="Plans"
              class="railButton"
              title="Plans"
              type="button"
            >
              <span
                aria-hidden="true"
                class="actionIcon"
              >
                <svg
                  data-content="6aaf59e1"
                  fill="none"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </span>
            </button>
          </div>
          <div
            class="userItem"
          >
            <button
              aria-label="Profile"
              class="railUserButton"
              title="Profile"
              type="button"
            >
              U
            </button>
          </div>
        </div>
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <img
                alt=""
                aria-hidden="true"
                height="24"
                src="/brand.png"
                style="object-fit: contain; display: inline-block;"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="localBuildBrand"
              >
                <span
                  class="localBuildTitle"
                >
                  CopyMonster
                </span>
                <span
                  class="buildVersion"
                >
                  1.2.3-rc.4-abc1234-dirty
                </span>
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        >
          <div
            class="actionItem"
          >
            <button
              aria-label="Plans"
              class="wideButton"
              title="Plans"
              type="button"
            >
              <span
                aria-hidden="true"
                class="actionIcon"
              >
                <svg
                  data-content="6aaf59e1"
                  fill="none"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </span>
              <span
                class="actionLabel"
              >
                Plans
              </span>
            </button>
          </div>
          <div
            class="userItem"
          >
            <div
              class="wideUserContainer"
            >
              <div
                class="userInfo"
                role="button"
                tabindex="0"
                title="Profile"
              >
                <div
                  class="userAvatar"
                >
                  U
                </div>
                <span
                  class="userLabel"
                >
                  Profile
                </span>
              </div>
              <div
                class="userActions"
              >
                <button
                  class="logoutButton"
                  title="Log out"
                  type="button"
                >
                  Log out
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <img
                alt=""
                aria-hidden="true"
                height="24"
                src="/brand.png"
                style="object-fit: contain; display: inline-block;"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="localBuildBrand"
              >
                <span
                  class="localBuildTitle"
                >
                  CopyMonster
                </span>
                <span
                  class="buildVersion"
                >
                  1.2.3-rc.4-abc1234-dirty
                </span>
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="新建会话"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新会话
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        >
          <div
            class="actionItem"
          >
            <button
              aria-label="套餐计划"
              class="wideButton"
              title="套餐计划"
              type="button"
            >
              <span
                aria-hidden="true"
                class="actionIcon"
              >
                <svg
                  data-content="6aaf59e1"
                  fill="none"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </span>
              <span
                class="actionLabel"
              >
                套餐计划
              </span>
            </button>
          </div>
          <div
            class="userItem"
          >
            <div
              class="wideUserContainer"
            >
              <div
                class="userInfo"
                role="button"
                tabindex="0"
                title="个人资料"
              >
                <div
                  class="userAvatar"
                >
                  U
                </div>
                <span
                  class="userLabel"
                >
                  个人资料
                </span>
              </div>
              <div
                class="userActions"
              >
                <button
                  class="logoutButton"
                  title="退出登录"
                  type="button"
                >
                  退出登录
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
